--- a/templates/profile_festival.html
+++ b/templates/profile_festival.html
@@ -37,6 +37,7 @@
                 </div>
             </div>
             {% else %}
+            <!-- SEZIONE ORGANIZZATORI -->
             <p style="font-family: 'Playfair Display', serif;">You haven't purchased a ticket yet.</p>
             <a href="{{ url_for('buy_ticket') }}" class="btn btn-success">Buy Ticket Now!</a>
             {% endif %}
