--- a/templates/performance_detail.html
+++ b/templates/performance_detail.html
@@ -56,7 +56,7 @@
             <div class="mt-4 p-3 bg-light rounded">
                 <h4>Interested?</h4>
                 <p>You can purchase tickets to attend this and other performances!</p>
-                <a href="{{ url_for('buy_ticket') }}" class="btn btn-success btn-lg">Buy Tickets</a>
+                <a href="{{ url_for('buy_ticket') }}" class="btn mypurchasebtn btn-lg">Buy Tickets</a>
             </div>
             {% elif current_user.is_authenticated and current_user.role == 'participant' %}
             <div class="mt-4 p-3 bg-light rounded">
