--- a/templates/manage_performance.html
+++ b/templates/manage_performance.html
@@ -55,7 +55,7 @@
                         value="{{ performance.genre if performance else request.form.genre }}" required>
                 </div>
                 <div class="mb-3">
-                    <!-- SE E' UNA BOZZA L'IMMAGINE E' GIA' PRESENTE - MPTIVO DELL'IF -->
+                    <!-- SE E' UNA BOZZA L'IMMAGINE E' GIA' PRESENTE - MOTIVO DELL'IF -->
                     <label for="image" class="form-label">Promotional Image {% if not perf_id %}*{% endif %}</label>
                     <input type="file" class="form-control" id="image" name="image"
                         accept="image/png, image/jpeg, image/gif">
