--- a/templates/manage_performance.html
+++ b/templates/manage_performance.html
@@ -4,7 +4,8 @@
 
 {% block content %}
 <div class="container mt-4">
-    <h2>{% if perf_id %}Edit {% else %} Create New{% endif %} Performance</h2>
+    <h2 style="font-family: 'Playfair Display', serif;">{% if perf_id %}Edit {% else %} Create New{% endif %}
+        Performance</h2>
     <hr>
     <form method="POST" enctype="multipart/form-data" novalidate>
         <div class="row">
