--- a/templates/base_festival.html
+++ b/templates/base_festival.html
@@ -12,6 +12,7 @@
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/logo/favicon.ico') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    {% block stylesheets_extra %}{% endblock %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style_festival.css') }}">
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
