--- a/templates/404.html
+++ b/templates/404.html
@@ -4,6 +4,6 @@
 <div class="container text-center mt-5">
     <h1 style="font-family: 'Playfair Display', serif;">404 - Page Not Found</h1>
     <p class="lead">Oops! The page you are looking for does not exist.</p>
-    <p><a href="{{ url_for('home') }}" class="btn btn-primary">Go to Homepage</a></p>
+    <p><a href="{{ url_for('home') }}" class="btn mybuttoncolors">Go to Homepage</a></p>
 </div>
 {% endblock %}
