--- a/templates/base_festival.html
+++ b/templates/base_festival.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="it-en">
 
 <head>
     <meta charset="UTF-8">
@@ -221,17 +221,24 @@
 
     {% endif %}
     <!-- FINE SEZIONE PULSANTE PER ORGANIZZATORI -->
-    {% if current_user.is_authenticated and current_user.role == 'participant' and not g_user_has_ticket %}
+
+
+
+
+    <!-- PULSANTE ACQUISTO BIGLIETTO -->
+    {% if (current_user.is_authenticated and current_user.role == 'participant' and not g_user_has_ticket) or not
+    current_user.is_authenticated %}
     <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 1030;">
 
+        {# Il link cambia in base allo stato di autenticazione #}
         <a href="{{ url_for('buy_ticket') }}" class="btn btn-success btn-lg shadow"
-            title="Compra qui il tuo biglietto!">
+            title="{{ _('Buy your ticket here!') }}">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                 class="bi bi-ticket-perforated-fill me-2" viewBox="0 0 16 16">
                 <path
                     d="M0 4.5A1.5 1.5 0 0 1 1.5 3h13A1.5 1.5 0 0 1 16 4.5V6a.5.5 0 0 1-.5.5 1.5 1.5 0 0 0 0 3 .5.5 0 0 1 .5.5v1.5a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 11.5V10a.5.5 0 0 1 .5-.5 1.5 1.5 0 1 0 0-3A.5.5 0 0 1 0 6zM1.5 4a.5.5 0 0 0-.5.5v1.05a2.5 2.5 0 0 1 0 4.9v1.05a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-1.05a2.5 2.5 0 0 1 0-4.9V4.5a.5.5 0 0 0-.5-.5z" />
             </svg>
-            Compra Biglietto! 
+            Compra Biglietto!
         </a>
     </div>
     {% endif %}
