--- a/templates/home_festival.html
+++ b/templates/home_festival.html
@@ -19,11 +19,12 @@
                     aria-label="Slide {{ loop.index }}"></button>
                 {% endfor %}
             </div>
-            <div class="carousel-inner rounded" style="max-height: 450px;">
+            <div class="carousel-inner rounded">
                 {% for perf_item in carousel_performances %}
                 <div class="carousel-item {{ 'active' if loop.first else '' }}">
-                    <img src="{{ url_for('static', filename=perf_item.image_path) }}" class="d-block w-100"
-                        alt="{{ perf_item.artist_name }}" style="object-fit: cover; height: 100%; max-height: 450px;">
+                    <img src="{{ url_for('static', filename=perf_item.image_path if perf_item.image_path else 'images/misc/placeholder.png') }}"
+                        class="d-block w-100" alt="{{ perf_item.artist_name }}">
+
                     <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 p-2 rounded">
                         <h5 style="font-family: 'Playfair Display', serif;">{{ perf_item.artist_name }}</h5>
                         <p>{{ perf_item.genre }} - {{ perf_item.day }} at {{ perf_item.start_time }}</p>
