--- a/templates/profile_festival.html
+++ b/templates/profile_festival.html
@@ -37,16 +37,18 @@
                 </div>
             </div>
             {% else %}
-            <!-- SEZIONE ORGANIZZATORI -->
+
             <p style="font-family: 'Playfair Display', serif;">You haven't purchased a ticket yet.</p>
             <a href="{{ url_for('buy_ticket') }}" class="btn btn-success">Buy Ticket Now!</a>
             {% endif %}
+            <!-- SEZIONE ORGANIZZATORI -->
             {% elif current_user.role == 'organizer' %}
             <h3 style="font-family: 'Playfair Display', serif;">My Managed Performances</h3>
             <a href="{{ url_for('manage_performance') }}" class="btn mynewperfbutton mb-3">Add New Performance</a>
-            {% if organizer_performances %}
+            {% if performances %}
             <div class="list-group">
-                {% for perf in organizer_performances %}
+                {% for perf in performances %}
+                {% if perf.is_published or perf.organizer_id == current_user.id %}
                 <div
                     class="list-group-item list-group-item-action flex-column align-items-start {% if not perf.is_published %}list-group-item-warning{% endif %}">
                     <div class="d-flex w-100 justify-content-between">
@@ -87,6 +89,7 @@
                         {% endif %}
                     </div>
                 </div>
+                {% endif %}
                 {% endfor %}
             </div>
             {% else %}
